# BAI

./: .cursorrules  .gitignore  ANALYTICS_IMPLEMENTATION.md  AUDIT_REPORT_MARKETING_CAMPAIGN_DATA_FLOW.md  AUDIT_REPORT_V3.md  BILLING_IMPLEMENTATION.md  Caddyfile  Caddyfile.save  DOCUMENTACION_GRAFICOS_DATA_MINING.md  ESTRUCTURA_PROYECTO.md  N8N_WORKFLOW_GUIDE.md  README.md  SCALABILITY_FIXES_COMPLETED.md  SCALABILITY_HEALTH_REPORT.md  docker-compose.yml  index.html  package-lock.json
backend/: Dockerfile  Dockerfile.dev  alembic.ini  create_admin_user.py  pyproject.toml  requirements-modular.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2ab37517a69d_add_extraction_queries_table.py  5eaac8d22173_add_processing_remote_and_review_ready_.py  6045d6344f11_add_arq_job_id_to_campaigns.py  66986bc6a920_add_content_planner_campaigns.py  67614d122950_add_subscription_fields_to_user.py  86754679b0c8_add_content_planner_campaigns_table.py  a022b4860535_add_missing_indexes_for_performance.py  a1b2c3d4e5f6_add_marketing_campaigns_and_content_pieces.py  b0d8386e7c4c_add_extraction_queries_table_fix.py  b86e9a43883c_add_usage_logs_table.py  cf9428b5de35_genesis_schema.py  d3ec8d2ba934_fase_7_content_creator_fix.py  dca87d5b429a_add_content_campaign_table.py  e7f8g9h0i1j2_add_style_field_to_contentpiece.py  f1a2b3c4d5e6_add_credits_fields_to_user.py
backend/app/: main-modular.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py  telemetry.py
(+188 files in other folders)
